Build Before Exercise 3

--- a/Vidly/Views/Web.config
+++ b/Vidly/Views/Web.config
@@ -40,4 +40,11 @@
       </assemblies>
     </compilation>
   </system.web>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient"
+                type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
