Implementation of EntityFramework and Authorisation

--- a/Vidly/Web.Debug.config
+++ b/Vidly/Web.Debug.config
@@ -10,7 +10,8 @@
 
     <connectionStrings>
       <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
+
+        connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=MyReleaseDB;Data Source=ReleaseSQLServer"
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
@@ -27,4 +28,7 @@
       </customErrors>
     -->
   </system.web>
+  <appSettings>
+    <add key="owin:appStartup" value="StartupDemo.ProductionStartup" />
+  </appSettings>
 </configuration>
