--- a/Vidly/Web.Release.config
+++ b/Vidly/Web.Release.config
@@ -28,4 +28,7 @@
       </customErrors>
     -->
   </system.web>
+  <appSettings>
+    <add key="owin:appStartup" value="StartupDemo.ProductionStartup" />
+  </appSettings>
 </configuration>
