--- a/Vidly/packages.config
+++ b/Vidly/packages.config
@@ -5,7 +5,7 @@
   <package id="bootbox" version="4.3.0" targetFramework="net461" />
   <package id="bootstrap" version="4.3.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
-  <package id="jQuery" version="3.3.1" targetFramework="net461" />
+  <package id="jQuery" version="3.4.1" targetFramework="net461" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
@@ -34,5 +34,8 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net461" />
+  <package id="toastr" version="2.1.1" targetFramework="net461" />
+  <package id="ToolBelt" version="1.8.11129.1" targetFramework="net461" />
+  <package id="Twitter.Typeahead" version="0.11.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
